2008-12-19  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* js/CalDAVAclManager.js
	Reidented the code. Also modified _appendIdentity()
	to NOT set any imip.identity to the corresponding
	calendar. This is not reliable and the code has
	been moved directly to getProperty() in
	calDavCalendar.js from Lightning.
	* chrome/content/sogo-connector/addressbook/autocomplete-common.js
	We now override ComposeLoad() so that we correctly show
	the "comment" field even when we first compose a message
	See https://bugzilla.mozilla.org/show_bug.cgi?id=227903.

2008-12-03  Ludovic Marcotte  <lmarcotte@inverse.ca>	

	* Added the possibility to refresh CalDAV ACLs
	* Removed the "supportsACLs" variable - we now
	entirely use hasAccessControl.

2008-11-28  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendars-list-overlay.js
	We now correctly enable the new task / event upon startup
	once the ACLs are loaded.
	* chrome/content/sogo-connector/lightning/messenger-overlay-sidebar.js
	Removed all the unused code. The whole overlay should be
	eventually removed.
	* js/CalDAVAclManager.js 
	We now force them imip.identity once the ACLs are loaded.
	* Bumped the version number to to.90pre22.

2008-11-26  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * js/CalDAVAclManager.js remove unnecessary calls
	to dump() and we now correctly set the identity
	of all calendars, even for those we don't own.
	* Bumped the version number to 0.90pre21

2008-11-24  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/addressbook/edit-list-overlay.js
	We fallback to the messenger window if the ab window isn't available

2008-11-23  Ludovic Marcotte  <lmarcotte@inverse.ca>	

	* chrome/content/sogo-connector/lightning/lightning-calendar-properties-overlay.js
	We now correctly select the menupopup item (first one)
	* Bumped the version number to 0.90pre19

2008-11-16  Ludovic Marcotte  <lmarcotte@inverse.ca>
